--- a/src/_variables-mixins.scss
+++ b/src/_variables-mixins.scss
@@ -5,6 +5,8 @@ $light-mode-input: hsl(0, 0%, 52%);
 $light-mode-background: hsl(0, 0%, 98%);
 $light-mode-elements: hsl(0, 0%, 100%);
 
+$width: 87vw;
+
 @mixin box-shadow {
 	box-shadow: 0px 4px 8px -6px rgba(0, 0, 0, 0.42);
 }
