--- a/src/_variables-mixins.scss
+++ b/src/_variables-mixins.scss
@@ -6,6 +6,7 @@ $light-mode-background: hsl(0, 0%, 98%);
 $light-mode-elements: hsl(0, 0%, 100%);
 
 $width: 87vw;
+$border-radius: 5px;
 
 @mixin box-shadow {
 	box-shadow: 0px 4px 8px -6px rgba(0, 0, 0, 0.42);
