--- a/src/App.scss
+++ b/src/App.scss
@@ -6,8 +6,13 @@
 	box-sizing: border-box;
 }
 
-html {
+html,
+input,
+button {
 	font-family: 'Nunito Sans', sans-serif;
+}
+
+body {
 	background-color: $light-mode-background;
 }
 
