--- a/src/components/search-box/search-box.style.scss
+++ b/src/components/search-box/search-box.style.scss
@@ -20,7 +20,7 @@
 	.search {
 		width: 27rem;
 		border: none;
-		border-radius: 3px;
+		border-radius: $border-radius;
 		padding: 1.2rem 0;
 		padding-left: 5rem;
 		color: $light-mode-input;
