--- a/src/_variables-mixins.scss
+++ b/src/_variables-mixins.scss
@@ -11,3 +11,7 @@ $border-radius: 5px;
 @mixin box-shadow {
 	box-shadow: 0px 4px 8px -6px rgba(0, 0, 0, 0.42);
 }
+
+@mixin box-shadow-hover {
+	box-shadow: 0px 7px 8px -2px rgba(0, 0, 0, 0.42);
+}
