--- a/src/components/card/card.style.scss
+++ b/src/components/card/card.style.scss
@@ -6,13 +6,20 @@
 		background-color: white;
 		border-radius: $border-radius;
 		overflow: hidden;
+		transition: all 0.3s;
+		cursor: pointer;
 		@include box-shadow;
+
+		&:hover {
+			transform: scale(1.05);
+			@include box-shadow-hover;
+		}
 	}
 
 	&-flag {
 		width: 100%;
 		height: 11rem;
-        object-fit: cover;
+		object-fit: cover;
 	}
 
 	&-description {
