--- a/src/_global-style.scss
+++ b/src/_global-style.scss
@@ -15,3 +15,16 @@ $border-radius: 5px;
 @mixin box-shadow-hover {
 	box-shadow: 0px 7px 8px -2px rgba(0, 0, 0, 0.42);
 }
+
+//link style reset
+.link {
+	text-decoration: none;
+
+	&:focus,
+	&:hover,
+	&:visited,
+	&:link,
+	&:active {
+		text-decoration: none;
+	}
+}
