--- a/src/components/card/card.style.scss
+++ b/src/components/card/card.style.scss
@@ -1,9 +1,10 @@
-@import '../../variables-mixins';
+@import '../../global-style';
 
 .card {
 	&-container {
 		width: 15rem;
 		background-color: white;
+		color: black;
 		border-radius: $border-radius;
 		overflow: hidden;
 		transition: all 0.3s;
@@ -39,3 +40,5 @@
 		}
 	}
 }
+
+
