--- a/src/pages/detail/detail.style.scss
+++ b/src/pages/detail/detail.style.scss
@@ -1,1 +1,56 @@
-@import '../../variables-mixins';
+@import '../../global-style';
+
+.detail {
+	&-container {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	&-back-btn {
+		margin: 3rem 0;
+		width: $width;
+	}
+
+	&-stats {
+		width: $width;
+		display: flex;
+		justify-content: space-between;
+	}
+
+	&-flag {
+		width: 25rem;
+		height: 22rem;
+	}
+
+	&-text-container {
+		width: 47vw;
+		.heading {
+			margin: 2.5rem 0;
+		}
+		.border {
+			margin-top: 3.5rem;
+			display: flex;
+			&-text {
+				font-weight: 600;
+				margin-top: 0.4rem;
+			}
+			&-btn {
+				margin-left: 0.5rem;
+			}
+		}
+	}
+
+	&-text {
+		display: flex;
+		justify-content: space-between;
+		.text {
+			line-height: 1.5rem;
+			font-weight: 600;
+			span {
+				margin-left: 3px;
+				font-weight: 300;
+			}
+		}
+	}
+}
