--- a/src/components/link-button/link-button.style.scss
+++ b/src/components/link-button/link-button.style.scss
@@ -1,8 +1,6 @@
 @import '../../global-style';
 
 .link-btn {
-	// width: 6rem;
-	// height: 2rem;
 	padding: 0.5rem 1.2rem;
 	font-weight: 600;
 	margin-right: 0.5rem;
@@ -11,9 +9,9 @@
 	border-radius: $border-radius;
 	transition: all 0.3s;
 	cursor: pointer;
-	@include box-shadow;
+	box-shadow: 0px 0px 5px -1px rgba(0, 0, 0, 0.42);
 	&:hover {
-		@include box-shadow-hover;
+		box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.42);
 		transform: scale(1.03);
 	}
 	.icon {
