--- a/src/_global-style.scss
+++ b/src/_global-style.scss
@@ -16,6 +16,26 @@ $border-radius: 5px;
 	box-shadow: 0px 7px 8px -2px rgba(0, 0, 0, 0.42);
 }
 
+.light {
+	background-color: white;
+	color: black;
+	transition: all 0.3s;
+}
+
+.dark {
+	background-color: $dark-mode-elements;
+	color: $light-mode-elements;
+	transition: all 0.3s;
+}
+
+.light-background{
+	background-color: $light-mode-background;
+}
+
+.dark-background{
+	background-color: $dark-mode-background;
+}
+
 //link style reset
 .link {
 	text-decoration: none;
