--- a/src/components/search-box/search-box.style.scss
+++ b/src/components/search-box/search-box.style.scss
@@ -1,5 +1,14 @@
 @import '../../global-style';
 
+// .light-mode {
+// 	color: $light-mode-input;
+// }
+
+// .dark-mode {
+// 	background-color: $dark-mode-elements;
+// 	color: $light-mode-elements;
+// }
+
 .search-container {
 	position: relative;
 	display: inline-block;
@@ -14,7 +23,6 @@
 
 		.search-icon {
 			font-size: 1rem;
-			color: $light-mode-input;
 		}
 	}
 	.search {
@@ -23,7 +31,18 @@
 		border-radius: $border-radius;
 		padding: 1.2rem 0;
 		padding-left: 5rem;
-		color: $light-mode-input;
 		font-size: 0.8rem;
+	}
+	.light-mode,
+	.light-mode::placeholder {
+		color: $light-mode-input;
+		transition: all 0.3s;
+	}
+
+	.dark-mode,
+	.dark-mode::placeholder {
+		background-color: $dark-mode-elements;
+		color: $light-mode-elements;
+		transition: all 0.3s;
 	}
 }
