--- a/src/pages/detail/detail.style.scss
+++ b/src/pages/detail/detail.style.scss
@@ -5,6 +5,7 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		height: calc(100vh - 56px);
 	}
 
 	&-back-btn {
@@ -16,6 +17,16 @@
 		width: $width;
 		display: flex;
 		justify-content: space-between;
+
+		.light-text {
+			color: black;
+			transition: all 0.3s;
+		}
+
+		.dark-text {
+			color: $light-mode-elements;
+			transition: all 0.3s;
+		}
 	}
 
 	&-flag {
