--- a/src/pages/homepage/homepage.style.scss
+++ b/src/pages/homepage/homepage.style.scss
@@ -4,7 +4,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	height: calc(100vh - 56px);
+	margin-bottom: 2rem;
 }
 
 .controllers {
