--- a/src/App.scss
+++ b/src/App.scss
@@ -11,3 +11,9 @@ input,
 button {
 	font-family: 'Nunito Sans', sans-serif;
 }
+
+@media screen and (max-width: 370px) {
+	html {
+		font-size: 12px;
+	}
+}
