--- a/src/components/dropdown/dropdown.style.scss
+++ b/src/components/dropdown/dropdown.style.scss
@@ -82,3 +82,16 @@
 		transform: scale(1);
 	}
 }
+
+@media screen and (max-width: 370px) {
+	.dropdown {
+		&-container {
+			margin-top: 2rem;
+		}
+
+		&-btn,
+		&-menu {
+			width: 15rem;
+		}
+	}
+}
