--- a/src/pages/homepage/homepage.style.scss
+++ b/src/pages/homepage/homepage.style.scss
@@ -13,3 +13,9 @@
 	justify-content: space-between;
 	margin: 3rem 0;
 }
+
+@media screen and (max-width: 370px) {
+	.controllers{
+		flex-direction: column;
+	}
+}
