--- a/src/components/dropdown/dropdown.style.scss
+++ b/src/components/dropdown/dropdown.style.scss
@@ -83,7 +83,7 @@
 	}
 }
 
-@media screen and (max-width: 370px) {
+@media screen and (max-width: $width-mobile) {
 	.dropdown {
 		&-container {
 			margin-top: 2rem;
