--- a/src/components/link-button/link-button.style.scss
+++ b/src/components/link-button/link-button.style.scss
@@ -19,7 +19,7 @@
 	}
 }
 
-@media screen and (max-width: 370px) {
+@media screen and (max-width: $width-mobile) {
 	.link-btn{
 		margin-right: 1rem;
 	}
