--- a/src/components/search-box/search-box.style.scss
+++ b/src/components/search-box/search-box.style.scss
@@ -47,7 +47,7 @@
 	}
 }
 
-@media screen and (max-width: 370px) {
+@media screen and (max-width: $width-mobile) {
 	.search {
 		font-size: 1rem !important;
 	}
