fixed heading margin top in mobile view

--- a/src/pages/detail/detail.style.scss
+++ b/src/pages/detail/detail.style.scss
@@ -68,6 +68,9 @@
 
 @media screen and (max-width: $width-mobile) {
 	.detail {
+		&-text-container{
+			margin-top: 2.5rem;
+		}
 		&-stats,
 		&-text {
 			width: $width;
